[project]
name = "frappe_mpsa_payments"
authors = [
    { name = "Navari Limited", email = "solutions@navari.co.ke"}
]
description = "Frappe Mpsa Payments"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"
known_frappe = "frappe"
known_erpnext = "erpnext"
no_lines_before = ["ERPNEXT"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FRAPPE", "ERPNEXT", "FIRSTPARTY", "LOCALFOLDER"]

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
